# robot_ras_ros

install/: local_setup.sh  setup.sh
install/count_action_cpp/lib/count_action_cpp/: CountClient  CountServer  count_server
install/count_action_cpp/share/count_action_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/count_interfaces/share/count_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/count_interfaces/share/count_interfaces/action/: Count.action
install/count_interfaces/share/count_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  count_interfacesConfig.cmake  count_interfaces__rosidl_typesupport_cExport-noconfig.cmake  count_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  count_interfaces__rosidl_typesupport_cppExport.cmake  count_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  count_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_count_interfaces__rosidl_generator_pyExport.cmake  export_count_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_count_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_count_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/dep_example_cpp/share/dep_example_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dep_example_cpp/share/dep_example_cpp/cmake/: dep_example_cppConfig.cmake
install/robot_ras_decision/lib/robot_ras_decision/: DecisionNode  Manager  MotorControllerNode  MovementControl  manager
install/robot_ras_decision/share/robot_ras_decision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_ras_decision/share/robot_ras_decision/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  robot_ras_decisionConfig-version.cmake  robot_ras_decisionConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robot_ras_decision/share/robot_ras_decision/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robot_ras_decision/share/robot_ras_decision/msg/: Movement.idl  Movement.msg
install/robot_ras_decision/share/robot_ras_decision/srv/: SetVelocity.idl  SetVelocity.srv  SetVelocity_Request.msg  (+1 more)
install/robot_ras_ros/share/robot_ras_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/count_action_cpp/: CMakeLists.txt  package.xml
src/count_action_cpp/include/count_action_cpp/: visibility_control.h
src/count_action_cpp/src/: count_server.cpp
src/count_interfaces/: CMakeLists.txt  package.xml
src/dep_example_cpp/: CMakeLists.txt
src/robot_ras_decision/: CMakeLists.txt
src/robot_ras_decision/msg/: Movement.msg
src/robot_ras_decision/src/: decision_node.cpp  motor_controller_node.cpp
(+90 files in other folders)
